--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -14,3 +14,6 @@ logging.level.blog=WARN
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor=TRACE
+
+#
+spring.mvc.hiddenmethod.filter.enabled=true
