--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=Enter your pass here
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 ###Logging Levels
 # Disable the default loggers
 logging.level.org=WARN
@@ -14,6 +14,5 @@ logging.level.blog=WARN
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor=TRACE
-
 #
 spring.mvc.hiddenmethod.filter.enabled=true
