--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=Enter your pass here
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 ###Logging Levels
 # Disable the default loggers
 logging.level.org=WARN
