--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -2,7 +2,8 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/car_sales_system?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Enter your pass here
+#Enter your password here
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
